Completando css do card

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="card">
             <div class="card__left">
                 <span>Raul Dionisio</span>
-                <h1>Darth Vader contrata devs</h1>
+                <a href="#">Darth Vader contrata devs</a>
                 <p>Darth Vader procura desenvolvedores que saibam trabalhar com componentes</p>
             </div>
             <div class="card__right">
