--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTAL DE NOTÍCIAS GALÁTICA</title>
     <link rel="stylesheet" href="styles/card.css">
+    <script src="src/components/cardNews.js" defer></script>
 </head>
 
 <body>
@@ -23,6 +24,7 @@
         </div>
     </div>
 
+    <card-news></card-news>
 </body>
 
 </html>
