--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>PORTAL DE NOTÍCIAS GALÁTICA</title>
     <link rel="stylesheet" href="styles/card.css">
     <script src="src/components/cardNews.js" defer></script>
+    <script src="src/components/TituloDinamico.js" defer></script>
 </head>
 
 <body>
@@ -25,6 +26,7 @@
     </div>
 
     <card-news></card-news>
+    <titulo-dinamico></titulo-dinamico>
 </body>
 
 </html>
