--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </div>
 
     <card-news></card-news>
-    <titulo-dinamico></titulo-dinamico>
+    <titulo-dinamico titulo="Notícia urgente"></titulo-dinamico>
+    <titulo-dinamico titulo="O meliante foi em cana! VIVA!"></titulo-dinamico>
 </body>
 
 </html>
