Componente com build e dados dinâmicos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
         </div>
     </div>
 
-    <card-news></card-news>
+    <card-news 
+        autor="Raul"
+        title="Darth Vader contrata devs"
+        link-url="google.com"
+        newsContent="Darth Vader procura desenvolvedores que saibam trabalhar com componentes"
+        photo = "assets/dart_Vader.jpeg"
+    ></card-news>
     <titulo-dinamico titulo="Notícia urgente"></titulo-dinamico>
     <titulo-dinamico titulo="O meliante foi em cana! VIVA!"></titulo-dinamico>
 </body>
