--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTAL DE NOTÍCIAS GALÁTICA</title>
     <link rel="stylesheet" href="styles/card.css">
-    <script src="src/components/cardNews.js" defer></script>
-    <script src="src/components/TituloDinamico.js" defer></script>
+    <script src="src/components/cardNews.js" defer></script> <!--O 'defer' é um booleano que só permite-->
+    <script src="src/components/TituloDinamico.js" defer></script><!--o js carregar depois de toda a página-->
 </head>
 
 <body>
